--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 
 
 
+
 }
 body{
   font-family: 'Montserrat', sans-serif;
@@ -18,7 +19,7 @@ font-size:3rem;
 line-height:1.5;
 }
 .title-content{
-  padding:3% 15% 10%;;
+  padding:3% 15% 10%;
 }
 
 .navbar-brand{
